@@ -11,3 +11,4 @@ _None_
 
 [B]Channel related[/B]
 * Added: Multi-stream SVT videos with extra speech options (only available in Sweden).
+* Fixed: NOS Streams stopped playing (Fixes #1512).
